working with instances instead of events

--- a/ICS-Testing/res/layout/act_cal_events.xml
+++ b/ICS-Testing/res/layout/act_cal_events.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <fragment android:id="@+id/calendarEvents"
-              class="com.udinic.ics_testing.CalendarEventsFragment"
+              class="com.udinic.ics_testing.CalendarInstancesFragment"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>
 
