--- a/AccountAuthenticator/res/xml/authenticator.xml
+++ b/AccountAuthenticator/res/xml/authenticator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-                           android:accountType="com.udinic.accounts_auth_example.app1"
+                           android:accountType="com.udinic.auth_example"
                            android:icon="@drawable/ic_launcher"
                            android:smallIcon="@drawable/ic_launcher"
                            android:label="@string/label"
