--- a/ICS-Testing/res/menu/menu_events.xml
+++ b/ICS-Testing/res/menu/menu_events.xml
@@ -4,6 +4,9 @@
     <item android:id="@+id/new_event"
           android:title="@string/new_event"
             />
+    <item android:id="@+id/edit_event"
+          android:title="@string/edit_event"
+            />
     <item android:id="@+id/help"
           android:title="@string/help" />
 </menu>
